--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,22 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
     "module": "CommonJS",
-    "moduleResolution": "node",
+    "target": "ES2020",
+    "moduleResolution": "Node",
+    "declaration": true,
+    "removeComments": true,
     "rootDir": "./src",
-    "outDir": "dist",
+    "outDir": "./dist/shipthisapi-js",
     "allowSyntheticDefaultImports": true,
-    "allowJs": false,
-    "importHelpers": true,
     "alwaysStrict": true,
     "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitAny": false,
     "noImplicitThis": true,
-    "strictNullChecks": true
-  },
-  "include": [
-    "src/**/*",
-    "__tests__/**/*"
-  ]
+    "strictNullChecks": false
+  }
 }
