--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "axios": "^0.26.1",
+    "formdata-node": "^5.0.0",
     "tslib": "~2.3.1"
   },
   "volta": {
